Update footer with licensing and copyright details
Added licensing information and copyright notice.

--- a/index.html
+++ b/index.html
@@ -451,7 +451,13 @@
             <li><a href="https://discord.gg/3rqcQjXFBW" target="_blank" class="hyperlink-link">Discord</a></li>
           </ul>
           <button onclick="topFunction()" id="myBtn" class="button" title="Ir arriba">↑ Volver arriba</button>
-          <p class="footer-copyright">&copy; 2025 DeltaPapus.</p>
+          <p class="footer-copyright">&copy; 2025 DeltaPapus. Código bajo licencia MIT.  
+  Contenido original bajo licencia 
+  <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">
+    CC BY-NC 4.0
+  </a>.  
+  No estamos afiliados con Toby Fox ni su equipo.  
+  *Deltarune* y *Undertale* son propiedad de Toby Fox.</p></p>
         </div>
       </footer>
     <!--Si me estas viendo, ve a https://deltapapus.netlify.app/medescubristepedro-->
