--- a/index.html
+++ b/index.html
@@ -58,35 +58,24 @@
 <h1 class="center-text">DeltaOwners</h1>
 <br>
 <div class="staff-card">
-  <img alt="DeltaPapu"
-       class="staff-avatar" src="https://cdn.discordapp.com/avatars/802736771930390530/2af8450cd1fd4a0e5855bd3103c4bfa6.webp?size=1024">
-  <h1>Lemon</h1>
-  <p>Fundador del server. Lo empezo todo.</p>
-</div>
-<div class="staff-card">
   <img alt="Staff 3"
        class="staff-avatar" src="https://cdn.discordapp.com/avatars/1353189869027065936/caad2db4596f40cf6530574a3a10fade.webp?size=1024">
   <h3>The real kris dreemur</h3>
-  <p>Familia wa</p>
+  <p>Familia wa.</p>
 </div>
 <div class="staff-card">
   <img alt="Staff 3"
        class="staff-avatar" src="https://cdn.discordapp.com/avatars/1279536516594401291/2c6457896beb4adc8d90613661f56ecc.webp?size=1024">
-  <h3>Shebex</h3>
-  <p>DeltaOwner del servidor.</p>
-</div>
-<div class="staff-card">
-  <img alt="Staff 3"
-       class="staff-avatar" src="https://cdn.discordapp.com/avatars/853425834710663188/77bdc91914426ed4511d2a609fd5461a.webp?size=1024">
-  <h3>Stereo</h3>
-  <p>DeltaOwner del servidor. Viva argentina wacho!!!</p>
+  <h3>El_flay2.0</h3>
+  <p>DeltaOwner del servidor. Más activo que mi perro.</p>
 </div>
 <div class="staff-card">
   <img alt="Staff 3"
        class="staff-avatar" src="https://cdn.discordapp.com/avatars/1066886606671323277/319c41a5f8fb8de6b356db0b6b7ada37.png?size=2048">
   <h3>Nomik961</h3>
-  <p>Owner del servidor. Es chill, y le gusta moderar y estar activo. :3</p>
+  <p>Propietario del servidor. Es chill, y le gusta moderar y estar activo. :3</p>
 </div>
+  
 <h2 class="center-text">Tambien..</h2>
 <h1 class="center-text">Admins</h1>
 <br>
@@ -95,25 +84,42 @@
     <img alt="Staff 2"
          class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
     <h3>ImTassinggTV</h3>
-    <p>Admin del server. Creo esta página, esta bien solito.</p>
+    <p>Admin del server. Creo esta página, hace pendejadas por tiempo libre (por eso me demotearon).</p>
   </div>
-</div>
+    <div class="staff-card">
+    <img alt="Staff 2"
+         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
+    <h3>Shebex</h3>
+    <p>Paso de Owner a Mod a Admin el man xdxdxd.</p>
+  </div>
+  <div class="staff-card">
+    <img alt="Staff 2"
+         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
+    <h3>Da_Zalev</h3>
+    <p>BIG SHOT</p>
+  </div>
+    <div class="staff-card">
+    <img alt="Staff 2"
+         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
+    <h3>Kris facha/h3>
+    <p>Tiene facha.</p>
+  </div>
 <h2 class="center-text">No se acuerdan?</h2>
 <h1 class="center-text">Moderadores</h1>
 <br>
 <div class="container staff-cards">
-  <div class="staff-card">
-    <img alt="DeltaPapu"
-         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1392765286071140485/ff5637cd0e986239d92421c05abbce59.webp?size=1024">
-    <h1>El_flay2.0</h1>
-    <p>Moderador que es muy activo.</p>
-  </div>
-  <div class="staff-card">
-    <img alt="Staff 2"
-         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1348778895096283136/bb5b78ce5bb83c60a77225be73d40a74.webp?size=1024">
-    <h3>Da_Zalev</h3>
-    <p>7 1</p>
-  </div>
+<div class="staff-card">
+  <img alt="DeltaPapu"
+       class="staff-avatar" src="https://cdn.discordapp.com/avatars/802736771930390530/2af8450cd1fd4a0e5855bd3103c4bfa6.webp?size=1024">
+  <h1>Lemon</h1>
+  <p>Lo empezo todo. Solo para ser mod xd.</p>
+</div>
+<div class="staff-card">
+  <img alt="DeltaPapu"
+       class="staff-avatar" src="https://cdn.discordapp.com/avatars/802736771930390530/2af8450cd1fd4a0e5855bd3103c4bfa6.webp?size=1024">
+  <h1>Brackishcloser</h1>
+  <p>Ni idea.</p>
+</div>
 </div>
 <h2 class="center-text">Porque tanto staff?</h2>
 <h1 class="center-text">Ayudantes</h1>
@@ -122,8 +128,8 @@
   <div class="staff-card">
     <img alt="Staff 2"
          class="staff-avatar" src="https://cdn.discordapp.com/avatars/1348778895096283136/bb5b78ce5bb83c60a77225be73d40a74.webp?size=1024">
-    <h3>Kris negro</h3>
-    <p>Tiene novia, es lo unico que se.</p>
+    <h3>¡Raúl!</h3>
+    <p>Diganme si edita bien.</p>
   </div>
 </div>
  <h2>Postulación activa:</h2>
