Fix HTML syntax error in index.html

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <h3>Kris facha/h3>
     <p>Tiene facha.</p>
   </div>
+</div>
 <h2 class="center-text">No se acuerdan?</h2>
 <h1 class="center-text">Moderadores</h1>
 <br>
