Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   <h3>Nomik961</h3>
   <p>Propietario del servidor. Es chill, y le gusta moderar y estar activo. :3</p>
 </div>
+</div>
   
 <h2 class="center-text">Tambien..</h2>
 <h1 class="center-text">Admins</h1>
