--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="staff-card">
     <img alt="Staff 2"
          class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
-    <h3>Kris facha/h3>
+    <h3>Kris facha</h3>
     <p>Tiene facha.</p>
   </div>
 </div>
