--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
 <div class="staff-card">
   <img alt="Staff 3"
-       class="staff-avatar" src="https://cdn.discordapp.com/avatars/1279536516594401291/2c6457896beb4adc8d90613661f56ecc.webp?size=1024">
+       class="staff-avatar" src="Photo/Foto_Flay.webp?size=1024">
   <h3>El_flay2.0</h3>
   <p>DeltaOwner del servidor. Más activo que mi perro.</p>
 </div>
@@ -95,13 +95,13 @@
   </div>
   <div class="staff-card">
     <img alt="Staff 2"
-         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
+         class="staff-avatar" src="Photo/Foto_Zalev.webp?size=2048">
     <h3>Da_Zalev</h3>
     <p>BIG SHOT</p>
   </div>
     <div class="staff-card">
     <img alt="Staff 2"
-         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
+         class="staff-avatar" src="Photo/Foto_Kris_facha.webp?size=2048">
     <h3>Kris facha</h3>
     <p>Tiene facha.</p>
   </div>
