--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
     <div class="staff-card">
     <img alt="Staff 2"
-         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
+         class="staff-avatar" src="Photo/Foto_Sheb.webp?size=2048">
     <h3>Shebex</h3>
     <p>Paso de Owner a Mod a Admin el man xdxdxd.</p>
   </div>
@@ -118,7 +118,7 @@
 </div>
 <div class="staff-card">
   <img alt="DeltaPapu"
-       class="staff-avatar" src="https://cdn.discordapp.com/avatars/802736771930390530/2af8450cd1fd4a0e5855bd3103c4bfa6.webp?size=1024">
+       class="staff-avatar" src="Photo/Foto_Brack.webp?size=1024">
   <h1>Brackishcloser</h1>
   <p>Ni idea.</p>
 </div>
