Update staff avatar image source for Raúl

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <div class="container staff-cards">
   <div class="staff-card">
     <img alt="Staff 2"
-         class="staff-avatar" src="https://cdn.discordapp.com/avatars/1348778895096283136/bb5b78ce5bb83c60a77225be73d40a74.webp?size=1024">
+         class="staff-avatar" src="Photo/Foto_Raul.webp?size=1024">
     <h3>¡Raúl!</h3>
     <p>Diganme si edita bien.</p>
   </div>
