Update postulation message in index.html

--- a/index.html
+++ b/index.html
@@ -137,14 +137,15 @@
  <h2>Postulación activa:</h2>
   <br>
   <div class="container">
-    <h1>Postulaciones 2025</h1>
-    <h2>Expira el 20 de octubre del 2025</h2>
-    <b>Opciones: Se revelara despues.</b>
+    <h1>¡Vuelve más tarde!</h1>
+    <h2>En estos momentos no hay una postulación.</h2>
+    <b>Deberías volver en un futuro.</b>
     <p>Solamente en el server de discord, link abajo</p>
     <a href="https://discord.gg/3rqcQjXFBW" target="_blank">
      <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Ir a Discord" class="hyperlink-link" width="50">
     </a>  
   </div>
+  <br>
   <div class="container" style="padding: 2rem 1rem;">
     <h2 style="color:#8aff80; text-align:center; margin-bottom:0.5em;">Canales del Servidor Esenciales</h2>
     <p style="text-align:center; color:#c0c0c0; margin-bottom:1.5em;">Estos son los canales más importantes del servidor. ¡Úsalos para enterarte de novedades, personalizar tu experiencia y conocer a la comunidad!</p>
