Update staff description in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <img alt="Staff 2"
          class="staff-avatar" src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048">
     <h3>ImTassinggTV</h3>
-    <p>Admin del server. Creo esta página, hace pendejadas por tiempo libre (por eso me demotearon).</p>
+    <p>Admin del server. Creo esta página, es tonto.</p>
   </div>
     <div class="staff-card">
     <img alt="Staff 2"
