Change favicon link to use local icon file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         name="description">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet"/>
   <link href="styles.css" rel="stylesheet"/>
-  <link href="https://www.example.com/favicon.ico" rel="icon">
+  <link href="icons/favicon.png" rel="icon">
 </head>
 <body>
 <br>
