Change navbar logo source to local icon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="navbar-left">
     <a alt="Info" class="navbar-logo" href="https://discord.gg/3rqcQjXFBW"
        style="height:32px;vertical-align:middle;"><img
-      src="https://cdn.discordapp.com/icons/1408971645569335420/a_8c29b24e902039643a70d5243978343d.gif?size=2048"/></a>
+      src="icons/favicontoo.png"/></a>
     <a class="navbar-title" href="https://discord.gg/3rqcQjXFBW">DeltaPapus!</a>
     <a class="navbar-link" href="https://youtube.com/@imtheDeltaPapu">YouTube</a>
   </div>
