Fix navbar logo link in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br>
 <nav class="navbar">
   <div class="navbar-left">
-    <a alt="Info" class="navbar-logo" href="https://discord.gg/3rqcQjXFBW"
+    <a alt="Info" href="https://discord.gg/3rqcQjXFBW"
        style="height:32px;vertical-align:middle;"><img
       src="icons/favicontoo.png"/></a>
     <a class="navbar-title" href="https://discord.gg/3rqcQjXFBW">DeltaPapus!</a>
