Update favicon image source with size parameter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="navbar-left">
     <a alt="Info" href="https://discord.gg/3rqcQjXFBW"
        style="height:32px;vertical-align:middle;"><img
-      src="icons/favicontoo.png"/></a>
+      src="icons/favicontoo.png?size=2048"/></a>
     <a class="navbar-title" href="https://discord.gg/3rqcQjXFBW">DeltaPapus!</a>
     <a class="navbar-link" href="https://youtube.com/@imtheDeltaPapu">YouTube</a>
   </div>
