Update navbar links and favicon image

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <br>
 <nav class="navbar">
   <div class="navbar-left">
-    <a alt="Info" href="https://discord.gg/3rqcQjXFBW"
+    <a alt="Info" class="navbar-icon" href="https://discord.gg/3rqcQjXFBW"
        style="height:32px;vertical-align:middle;"><img
-      src="icons/favicontoo.png?size=2048"/></a>
-    <a class="navbar-title" href="https://discord.gg/3rqcQjXFBW">DeltaPapus!</a>
-    <a class="navbar-link" href="https://youtube.com/@imtheDeltaPapu">YouTube</a>
+      src="icons/favicon.png?size=2048"/></a>
+    <a class="navbar-link" href="https://youtube.com/@deltapapustv">YouTube</a>
+    <a class="navbar-link" href="https://twitter.com/@deltapapus">Twitter</a>
   </div>
   <div class="navbar-categories">
   </div>
