Add video tutorial section to index.html
Added a video tutorial section with an embedded YouTube iframe.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
   <b>Ver los miembros del staff, cambios recientes y otras cositas que agreguemos.</b>
   <p>Tip: Arriba donde dice Discord obviamente te unes al Discord!</p>
 </div>
+<br>
+<h2 class="center-text">Tutorial de la página.</h2>
+<div class="container">
+  <h1>Tutorial en Video</h1>
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7YRw26jPUV8?si=sCUlBh9y_GpHxjD8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
 <h2 class="center-text">Acerca del servidor.</h2>
 <br>
 <div class="container">
