Update footer links and copyright information

--- a/index.html
+++ b/index.html
@@ -463,17 +463,20 @@
           <h3>¡Gracias por visitar DeltaPapus!</h3>
           <p>Conéctate con nosotros en nuestras redes sociales y mantente al tanto de todas las novedades.</p>
           <ul class="footer-links">
-            <li><a href="https://youtube.com/@imtheDeltaPapu" target="_blank" class="hyperlink-link">YouTube</a></li>
+            <li><a href="https://youtube.com/@deltapapustv" target="_blank" class="hyperlink-link">YouTube</a></li>
+            <li><a href="https://twitter.com/@deltapapus" target="_blank" class="hyperlink-link">Twitter</a></li>
+            <li><a href="https://tiktok.com/@deltapapus1" target="_blank" class="hyperlink-link">TikTok</a></li>
             <li><a href="https://discord.gg/3rqcQjXFBW" target="_blank" class="hyperlink-link">Discord</a></li>
           </ul>
           <button onclick="topFunction()" id="myBtn" class="button" title="Ir arriba">↑ Volver arriba</button>
           <p class="footer-copyright">&copy; 2025 DeltaPapus. Código bajo licencia MIT.  
   Contenido original bajo licencia 
-  <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">
+  <a class="hyperlink-link" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">
     CC BY-NC 4.0
   </a>.  
   No estamos afiliados con Toby Fox ni su equipo.  
-  *Deltarune* y *Undertale* son propiedad de Toby Fox.</p></p>
+  "Deltarune" y "Undertale" son propiedad de Toby Fox.</p></p>
+  <p>"DELTAPAPUS Page" es un proyecto no comercial gratuito de código abierto.</p>
         </div>
       </footer>
     <!--Si me estas viendo, ve a https://deltapapus.netlify.app/medescubristepedro-->
