Correct capitalization and add logo attribution
Updated the text to capitalize 'UNDERTALE' and 'DELTARUNE'. Added a new paragraph about the 'DELTAPAPUS' logo and its creator.

--- a/index.html
+++ b/index.html
@@ -474,8 +474,11 @@
   <a class="hyperlink-link" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">
     CC BY-NC 4.0
   </a>.  
-  No estamos afiliados con Toby Fox ni su equipo.  
-  "Deltarune" y "Undertale" son propiedad de Toby Fox.</p></p>
+  No estamos afiliados con Toby Fox ni su equipo. "UNDERTALE" y "DELTARUNE" son propiedad de Toby Fox.</p></p>
+    <p>  El logotipo de “DELTAPAPUS” utilizado en este sitio ha sido creado por 
+      <a href="https://github.com/imtassingg" class="hyperlink-link" target="_blank">ImTassinggHD</a>
+      y se distribuye bajo la licencia 
+    <a href="https://creativecommons.org/licenses/by-nc/4.0/" class="hyperlink-link" target="_blank">CC-BY-NC 4.0</a>. </p>
   <p>"DELTAPAPUS Page" es un proyecto no comercial gratuito de código abierto.</p>
         </div>
       </footer>
