Update favicon size and add source link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <div class="navbar-left">
     <a alt="Info" class="navbar-icon" href="https://discord.gg/3rqcQjXFBW"
        style="height:32px;vertical-align:middle;"><img
-      src="icons/favicon.png?size=2048"/></a>
+      src="icons/favicon.png?size=256"/></a>
+    <a class="navbar-title" href="https://youtube.com/@deltapapustv">Discord</a>
     <a class="navbar-link" href="https://youtube.com/@deltapapustv">YouTube</a>
     <a class="navbar-link" href="https://twitter.com/@deltapapus">Twitter</a>
   </div>
@@ -467,6 +468,7 @@
             <li><a href="https://twitter.com/@deltapapus" target="_blank" class="hyperlink-link">Twitter</a></li>
             <li><a href="https://tiktok.com/@deltapapus1" target="_blank" class="hyperlink-link">TikTok</a></li>
             <li><a href="https://discord.gg/3rqcQjXFBW" target="_blank" class="hyperlink-link">Discord</a></li>
+            <li><a href="https://github.com/deltapapus/deltapapus.github.io" target="_blank" class="hyperlink-link">Source</a></li>
           </ul>
           <button onclick="topFunction()" id="myBtn" class="button" title="Ir arriba">↑ Volver arriba</button>
           <p class="footer-copyright">&copy; 2025 DeltaPapus. Código bajo licencia MIT.  
