--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           </ul>
           <button onclick="topFunction()" id="myBtn" class="button" title="Ir arriba">↑ Volver arriba</button>
           <p class="footer-copyright">&copy; 2025 DeltaPapus. Código bajo licencia MIT. Contenido original bajo licencia <a class="hyperlink-link" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0.</a></p>
-          <p>"DELTAPAPUS" No estamos afiliados con Toby Fox ni su equipo. <a href="undertale.com" target=_blank" class="hyperlink-link">"UNDERTALE"</a> y <a href="deltarune.com" target=_blank" class="hyperlink-link">"DELTARUNE"</a> es propiedad de Toby Fox.</p>
+          <p>No estamos afiliados con Toby Fox ni su equipo. <a href="undertale.com" target=_blank" class="hyperlink-link">"UNDERTALE"</a> y <a href="deltarune.com" target=_blank" class="hyperlink-link">"DELTARUNE"</a> es propiedad de Toby Fox.</p>
           <p>"DELTAPAPUS" no es un servidor/proyecto oficial, aprobado o verificado de <a href="discord.com" target="_blank" class="hyperlink-link">"Discord"</a>, y no estamos afiliados con "Discord Inc". <a href="discord.com" target="_blank" class="hyperlink-link">"Discord"</a> es una marca registrada de Discord Inc.</p>
           <p>El logotipo de “DELTAPAPUS” utilizado en este sitio ha sido creado por <a href="https://github.com/imtassingg" class="hyperlink-link" target="_blank">ImTassinggHD</a> y se distribuye bajo la licencia <a href="https://creativecommons.org/licenses/by-nc/4.0/" class="hyperlink-link" target="_blank">CC-BY-NC 4.0.</a></p>
           <p><a href="deltapapus.github.io class="hyperlink-link" target="_blank">"DELTAPAPUS Page"</a> es un proyecto no comercial gratuito de código abierto sin ánimo de lucro.</p>
